--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.5",
+    "react-native-ble-manager": "^10.0.2",
     "react-native-ble-plx": "^2.0.3",
     "react-native-bluetooth-classic": "^1.60.0-rc.26",
     "react-native-quick-base64": "^2.0.5"
